# AltVolts-ya-rust-sprint-4-project

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
blur_plugin/tests/: integration_test.rs
image_processor/: Cargo.toml  ReadMe.md
image_processor/src/: cli.rs  error.rs  image_io.rs  lib.rs  main.rs  plugin.rs  plugin_loader.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
mirror_plugin/tests/: integration_test.rs
test_files/: blur_plugin_params.json  mirror_plugin_params.json  params_file.json
