[package]
name = "image_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_plugin"
path = "src/lib.rs"

[[bin]]
name = "image_processor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"

log = {workspace = true}
env_logger = {workspace = true}
libloading = "0.9.0"
serde_json = {workspace = true}
