[package]
name = "image_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_plugin"
path = "src/lib.rs"

[[bin]]
name = "image_processor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"

log = "0.4.29"
env_logger = "0.11.10"
libloading = "0.9.0"
thiserror = "2.0.18"
